# brain

./: .enrichment_checkpoint.json  .gitignore  Glossary.md  LICENSE  PLAN_CMA_Ingestion.md  PLAN_Domain_Ingestion.md  PLAN_Entity_Registry.md  PLAN_Strategy_Indexing.md  README.md  RELEASE_NOTES.md  brain_writer_state.json  content_index.json  enrichment_state.json  entity_aliases.json  pyproject.toml  registry.yaml  requirements.txt  resolver_cache.json  setup.py
.schema/: person.schema.json  project.schema.json  registry.schema.json  relationship.schema.json  team.schema.json
.snapshots/: latest
Architecture/: Confluence_ConsumerCore.md  Confluence_MONOLITHS.md  Confluence_TNV.md  OWL.md  SCM.md  Service_Catalog.md  Squad_Code_Map.md
Caches/: slack_user_cache.json
Confucius/: .confucius_state.json  2026-02-03-08b804a8.md
Entities/: (A-Dos)_Arbaaz_Dossani.md  Abbas_Ali_Awan.md  Adam_Kalikow.md  Adam_Park.md  Adam_Park_Ed_Boyes.md  Ahmed_ElSebaei.md  Ahmed_Wagdi.md  Ají_Verde_Turkey.md  Aleksei_Akireikin.md  Alex_Matlin.md  Alexander_Matlin.md  Amey_Patil.md  Ana_Garcia.md  Ana_Garcia_(Tech_Support_Suman_Rao_Marc_Huvelin____INTL_WFS_Philipp_Börner).md  Anatta.md  Anshal_Anand.md  Assaf_Ronen.md  BNL_Premium_Tier.md  Bartosz_Raciborski.md  Beatrice.md  Beatrice_Dimarucut.md  Ben_Waugh_Alex_Garcia.md  Brandon_Donato-Long.md  Bruno_Klarin.md  Callstack.md  ChatGPT_Ads.md  ChatGPT_Apps.md  Chicken_Mushroom_Marsala.md  Christian_Gaertner_Greg_Chisholm.md  Consumer_Core_Tribe.md  Consumer_Foundations_Tribe.md  Creator_Marketplace.md  Daily_Greens.md  Damian_Tylczyński.md  Dan_Seidel.md  Dan_Seidel_Mark_Hemming.md  Daniel.md  Deo.md  Deo_Nathaniel.md  Dina_Mehrez.md  (+263 more)
Experiments/: EXP-2025_christmas_campaign.md  EXP-2025_christmas_campaign_dach.md  EXP-aa_test_sticky_variations.md  EXP-aa_test_validate_android_integration_analyse.md  EXP-abdullah_test_sfmc.md  EXP-act-1-enhanced-cooking-mode.md  EXP-actives_hfm_uk_no_discount_q3_25.md  EXP-aurora-correct-converted-only.md  EXP-aurora-predictive-metrics-qa-2.md  EXP-aurora-predictive-metrics-qa-3.md  EXP-aurora-predictive-metrics-qa-4.md  EXP-aurora-predictive-metrtics-qa-2_1.md  EXP-aurora-predictive-qa-5.md  EXP-aurora-predictive-qa-6.md  EXP-aurora-qa-predictive-1.md  EXP-aurora-test-sequential.md  EXP-aurora_decision_test.md  EXP-aurora_predictive_8.md  EXP-aurora_show_demo.md  EXP-aurora_test_bar_raiser.md  EXP-auto_save_web_au_bias.md  EXP-auto_save_web_us_bias.md  EXP-backend_test.md  EXP-be_menu_expansion_mw23_to_mw28.md  EXP-benelux_dedicateddiscounttest_ret.md  EXP-ca_factor_in_core_on_only.md  EXP-ca_mealchoice_linkingpage_test.md  EXP-ca_sustainability.md  EXP-cancellation_funnel_compliance_us_clvforactives_demo.md  EXP-cancellation_funnel_compliance_us_qa_clvforactives.md  EXP-cc-cert-goodchop.md  EXP-ccomms-1046-order-review-section.md  EXP-ccomms-1395-model-vs-bau.md  EXP-ccomms-794-moment-of-assurance-ii-v2-analysis.md  EXP-cdp_fj_active_ret_prodmon_mc_banner_test_24w42.md  EXP-check_ccv_ids.md  EXP-checkout-delivery-details-screen-mealkit-rte-global-v2.md  EXP-checkout_delivery_flexibility_message_clarity.md  EXP-chefsplate_choice_expansion-ab_dc_only-feb-19.md  EXP-churn_fj_campaign.md  (+289 more)
GitHub/: PR_Activity.md  Recent_Commits.md
Inbox/: GITHUB_2025-12-16.md  GITHUB_2026-01-12.md  INBOX_2025-12-16-01.md  INBOX_2025-12-16-02.md  INBOX_2025-12-17-.md  INBOX_2025-12-18-01.md  INBOX_2025-12-19-.md  INBOX_2025-12-19-01.md  INBOX_2025-12-22-.md  INBOX_2025-12-22-01.md  INBOX_2025-12-22-02.md  INBOX_2025-12-23-.md  INBOX_2025-12-23-01.md  INBOX_2025-12-29-.md  (+11 more)
(+2975 files in other folders)
