[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmos-brain"
version = "2.0.0"
description = "Semantic Knowledge Graph with Graph Analytics, Enrichment Pipeline & Quality Scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PM-OS Team", email = "pm-os@example.com"},
]
keywords = [
    "knowledge-graph",
    "semantic",
    "ai-agent",
    "pm-os",
    "product-management",
    "llm",
    "graph-analytics",
    "enrichment",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# LLM Providers
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
gemini = ["google-generativeai>=0.4"]
mistral = ["mistralai>=0.1"]
ollama = ["ollama>=0.1"]
litellm = ["litellm>=1.0"]
bedrock = ["boto3>=1.34"]

# All LLM providers
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "google-generativeai>=0.4",
    "mistralai>=0.1",
    "ollama>=0.1",
]

# Integrations
slack = ["slack-sdk>=3.0"]
jira = ["atlassian-python-api>=3.0"]
github = ["PyGithub>=2.0"]
google = [
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]

# All integrations
integrations = [
    "slack-sdk>=3.0",
    "atlassian-python-api>=3.0",
    "PyGithub>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]

# Graph Operations (NEW)
graph = [
    "networkx>=3.0",
    "matplotlib>=3.0",
]

# Embeddings & Vector Search
embeddings = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]

# NLP
nlp = [
    "spacy>=3.0",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

# Full features (NEW)
full = [
    "pmos-brain[llm,integrations,graph,embeddings,nlp,dev]",
]

# Everything
all = [
    "pmos-brain[full]",
]

[project.urls]
Homepage = "https://github.com/feamando/brain"
Documentation = "https://github.com/feamando/brain#readme"
Repository = "https://github.com/feamando/brain"
Issues = "https://github.com/feamando/brain/issues"

[project.scripts]
pmos-brain = "pmos_brain.cli:main"
brain = "pmos_brain.cli:main"
brain-search = "pmos_brain.cli:search"
brain-enrich = "pmos_brain.cli:enrich"
brain-validate = "pmos_brain.cli:validate"
brain-setup = "pmos_brain.cli:setup"
brain-graph = "pmos_brain.cli:graph"
brain-quality = "pmos_brain.cli:quality"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/schemas",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmos_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
